--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.1.1"
 djangorestframework = "^3.15.2"
+django-rest-knox = "^5.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
+drf-yasg = "^1.21.8"
 
 [build-system]
 requires = ["poetry-core"]
