--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django = "^5.1.1"
 djangorestframework = "^3.15.2"
 django-rest-knox = "^5.0.2"
+mutagen = "^1.47.0"
 
 
 [tool.poetry.group.dev.dependencies]
