--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "rhythmiq"
 version = "0.1.0"
-description = ""
+description = "rhythmiq project"
 authors = ["Yerly Sevan <sevan.yerly@he-arc.ch>"]
 readme = "README.md"
 
@@ -11,6 +11,9 @@ django = "^5.1.1"
 djangorestframework = "^3.15.2"
 django-rest-knox = "^5.0.2"
 mutagen = "^1.47.0"
+django-cors-headers = "^4.6.0"
+audioread = "^3.0.1"
+pillow = "^11.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
